# generic-cmake-project

./: .gitignore  CMakeLists.txt  docker-compose.yaml
